--- a/src/common-scss/variables.scss
+++ b/src/common-scss/variables.scss
@@ -36,3 +36,54 @@ $screen-width-big: 1000px;
 $screen-width-medium: 800px;
 $screen-width-small: 600px;
 $screen-width-tiny: 350px;
+
+//mixins
+@mixin button($button-color, $active-button-color) {
+    width: 100px;
+    height: 30px;
+    background-color: $button-color;
+    border: none;
+    outline: none;
+    color: $background-color;
+    font-size: 14px;
+    cursor: pointer;
+    transition-duration: 200ms;
+
+    @media screen and (max-width: $screen-width-large) {
+        width: 100px;
+        height: 24px;
+        font-size: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        width: 100px;
+        height: 20px;
+        font-size: 11px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        width: 80px;
+        height: 18px;
+        font-size: 10px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        width: 70px;
+        height: 16px;
+        font-size: 9px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        width: 60px;
+        height: 14px;
+        font-size: 8px;
+    }
+
+    &:hover {
+        box-shadow: 2px 2px 2px $shadow-color;
+    }
+
+    &:active {
+        background-color: $active-button-color;
+    }
+}
