--- a/src/App.scss
+++ b/src/App.scss
@@ -78,6 +78,11 @@
     }
 }
 
+.errorMessage {
+    color: $error-color;
+    font-size: 11px;
+}
+
 @keyframes messageIn {
     0% {
         opacity: 0;
