--- a/src/components/Home/Promotions/Promotion/PromotionProduct/PromotionProduct.module.scss
+++ b/src/components/Home/Promotions/Promotion/PromotionProduct/PromotionProduct.module.scss
@@ -10,8 +10,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background-color: $second-color;
-    border: 4px solid $background-color;
+    background-color: $background-color;
+    border: 4px solid $second-color;
     cursor: pointer;
     transition-duration: 0.5s;
     z-index: 1;
